@@ -21,6 +21,7 @@
 - FIX: An error occurs when closing a project while the ivy editor is opened (IVYDE-81)
 - FIX: Compilation fails on Europa due to API change (IVYDE-58)
 - FIX: No debug info in console (IVYDE-39)
+- FIX: Internal error when doing resolve (IVYDE-34)
 
 - moved to apache, packages renamed to org.apache.ivyde
   				
